--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,8 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
+lib_deps = 
+	miguelbalboa/MFRC522@^1.4.12
+	madhephaestus/ESP32Servo@^3.0.7
+	arduino-libraries/Servo@^1.2.2
+monitor_speed = 115200
